Removed some white space issues.

--- a/src/sass/create.scss
+++ b/src/sass/create.scss
@@ -189,7 +189,7 @@ a {
 	margin: -250px -387px;
 	width: 675px;
 	height: 500px;
-	z-index: 1;
+	z-index: 2;
 	box-shadow: 0px 0px 1000px #000,
 		0px 0px 10px #000;
 	opacity: 0;
@@ -201,24 +201,34 @@ a {
 }
 #embed_dialog.show {
 	opacity: 1;
- 	box-shadow: none;
- 	text-algin: left;
-  	top: 50%;
- 	width: 800px;
+	box-shadow: none;
+	text-align: left;
+	top: 50%;
+	width: 800px;
+}
+#modal-cover {
+	top: -50%;
+	left:-50%;
+	opacity: 0.4;
+	width: 10000px;
+	height: 10000px;
+	background-color: #000000;
+	position: absolute;
+	z-index: 1;
 }
 
 .animate-show {
-  opacity:1;
-  -webkit-transition: all ease 0.5s;
-  transition: all ease 0.5s;
+	opacity:1;
+	-webkit-transition: all ease 0.5s;
+	transition: all ease 0.5s;
 }
 
 .animate-show.ng-hide {
-  height: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-  opacity: 0;
-  display: block !important;
+	height: 0;
+	padding-top: 0;
+	padding-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+	opacity: 0;
+	display: block !important;
 }
